CHANGES
=======

1.0.6
-----

* make linter happy
* adds openstack\_ratelimit\_errors\_total metric

1.0.5
-----

* don't require python-redis >=3.1.0

1.0.4
-----

* bump redis requirement
* adds license badge

1.0.3
-----

* fix exception handling

1.0.2
-----

* fix sorting; adds make test-local via redis container
* more travis
* travis
* style fixes
* removes print
* fix lookahead
* support whitelisting users by name
* recommendation
* nanosecond clock accuracy

1.0.1
-----

* fix init
* document configurable options
* docs
* fix more typos
* fix typo
* fix test with FakeKeystoneclient
* fixes #10

1.0.0
-----

* it's stable
* it's stable
* Redis traffic shaping (#11)
* Update README.md
* closed #8
* nothing to see
* fix test for membership
* fix test
* fix the fix
* fix import
* rm unused import
* fix test
* fix pep8
* docs
* fix blacklisting and suspending requests; extend wsgi configuration for max\_sleep\_time\_seconds, log\_sleep\_time\_seconds
* fix retry-after header value
* align metric labels with watcher middleware; verify backend on start; update examples in docs
* easier way of setting headers
* changelog

0.0.3
-----

* make pep8 happy
* more purging
* completely remove oslo\_log

0.0.2
-----

* simplify configurable ratelimitresponse and blacklistresponse; set status\_code; adjust tests
* switch from oslo\_log to logging; copy environ from request to response
* fix source
* bump redis requirement
* update readme

0.0.1
-----

* fix test
* drop logging
* already installed
* more pep8
* make pep8 happy
* tox with py3
* fix NotImplementedError
* millisecond accuracy; fix tests
* fix test
* sorted keys to fix test
* phrasing
* adds docs on metrics
* adds headers; udpates docs
* gitignore
* everything's an int
* it's an int
* full redis support with tests, docs, minor fixes (#7)
* redis support (#6)
* log level info->debug
* log level info->debug
* fix default: rate limit by initiator project id
* fix metric labels
* travis
* readme