@@ -1,6 +1,9 @@
 CHANGES
 =======
 
+* logging ignore error
+* changelog
+
 1.0.6
 -----
 
